Changelog for Shake

    #503, add getShakeExtra/addShakeExtra
    #492, fix the single letter flag documentation
    Expose 'Process' from Development.Shake
    Permit process-1.4.3.0 and above
    #495, remove dangling link from LICENSE
    #488, make sure parallel tracks dependencies
    #436, remove Assume, switch to Rebuild
    #419, remove --assume-old and --assume-new, which never worked
    Remove support for running Makefile scripts
    Add getShakeOptionsRules, to get ShakeOptions in Rules
    #479, improve the robustness of the Pool tests
    #481, document how to raise errors in Action
    Delete the deprecated system* functions
    #427, check stored value after checking dependencies
    Require extra-1.4.10
    Significant changes to defining custom rules
    Delete the deprecated defaultRule
    IMPORTANT: Incompatible on disk format change
    #428, don't persist errors to the database
0.15.10
    #465, fix phony names which clash with directories
0.15.9
    Documentation tweaks
    Optimise the thread pool
    Fix progress output through wget
0.15.8
    Extra base bounds to rule out building on GHC 7.4
0.15.7
    Require extra-1.4.8
    #457, better error message when calling need on a directory
    #456, use displayException for inner exceptions
    Improve the documentation for priority/alternative
    #448, fix FSATrace on Mac 10.11
    #444, optimise copyFileChanged
    #58, change writeFile functions to MonadIO
0.15.6
    Require the primitive package
    #431, make it an error to need a directory
    #393, add orderOnlyAction, a general version of orderOnly
    #408, explain that alwaysRerun has no immediate effect
    #410, add --digest-not flag to select ChangeModtime
    #416, export ShakeValue from the main module only
    #352, improve the grammar in the profiling document
    #399, explain what in getDirectoryFiles is tracked
    #108, add getDirectoryFilesIO, an untracked version
    #401, document getDirectoryFiles exception behaviour